scss/actives.scss
.activesTabs {
  &--wrapper {
    background-color: #000;
    border-radius: 8px;
    padding: 7px 8px;
    display: flex;
  }
  &--item {
    font-weight: 700;
    font-size: 14px;
    line-height: normal;
    text-align: center;
    color: #ffffff;
    display: inline-flex;
    justify-content: center;
    width: 25%;
    flex: 1 1 auto;
    border-radius: 8px;
    padding: 10px 0;

    &--active {
      background-image: linear-gradient(to top, #fe8d03, #fcbf04);
    }
    & + & {
      margin-left: 7px;
    }
  }
}

.activesContent {
  margin-top: 7px;

  &--item {
    width: 100%;
    display: flex;
    align-items: center;
    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 0.40);
    background-image: linear-gradient(to bottom, #104e1d, #297428);
    border-radius: 10px;
    padding: 10px;

    & + & {
      margin-top: 7px;
    }

    &Icon {
      width: 60px;
      height: 60px;
      display: flex;
      flex: 0 0 auto;
      justify-content: center;
      align-items: center;
      background-color: rgba(1, 41, 15, 0.6);
      border-radius: 10px;
      margin-right: 10px;

      img {
        width: 43px;
        height: 43px;
        border-radius: 50%;
        overflow: hidden;
      }
    }
    &Text {
      &Title {
        font-weight: 700;
        font-size: 15px;
        margin-bottom: 12px;

        img {
          margin-right: 4px;
        }
      }
      &Body {
        display: flex;
      }
      &BodyCol {
        display: flex;
        flex: 1 1 auto;
        flex-direction: column;
        padding-left: 10px;

        &:first-of-type {
          padding-left: 0;
        }
        & + & {
          margin-left: 10px;
          border-left: 1px solid #8cad90;
        }
        &Title {
          font-weight: 400;
          font-size: 10px;
          line-height: normal;
          color: #8cad90;
          margin: 0;
        }
        &Value {
          font-weight: 700;
          font-size: 11px;
          line-height: normal;
          color: #ffffff;
          display: inline-flex;
          align-items: center;
          margin: 0;
        }
        &CoinIcon {
          width: 11px;
          margin-left: 2px;
          margin-top: 1.5px;
        }
      }
    }
    &Income {
      display: flex;
      flex: 1 1 auto;
      flex-direction: column;
      justify-content: space-between;
      align-items: flex-end;
      height: 59px;

      &Price {
        font-weight: 700;
        font-size: 15px;
        line-height: normal;
        text-align: right;
        color: #ffffff;
        display: inline-flex;
        align-items: center;

        &CoinIcon {
          width: 14px;
          margin-left: 2px;
          margin-top: 2px;
        }
      }
      &Value {
        font-weight: 700;
        font-size: 11px;
        line-height: normal;
        text-align: right;
        color: #4fe34f;
        display: inline-flex;
        align-items: center;

        &CoinIcon {
          width: 11px;
          margin-left: 2px;
          margin-top: 1.5px;
        }
      }
    }
  }
}

.activesModal {
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 200;
  box-shadow: 0 2px 2px 0 rgb(0 0 0 / 0.40);
  background-image: linear-gradient(to bottom, #104e1d, #297428);
  padding-top: 10px;
  border-radius: 8px 8px 0 0;
  transition: all 0.2s ease;

  &--hidden {
    transform: translateY(100%);
  }

  &--titleWrapper {
    margin-bottom: 22px;
  }
  &--title {
    font-weight: 700;
    font-size: 21px;
    line-height: normal;
    color: #ffffff;

    img {
      width: 18px;
      margin-right: 7px;
    }
  }
  &--close {
    appearance: none;
    border: 0 none;
    width: 24px;
    height: 24px;
    background: transparent;
  }
  &--logoWrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;

    &Bg {
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      z-index: 0;
    }
  }
  &--logo {
    width: 104px;
    height: 104px;
    background-color: #fff;
    border-radius: 50%;
    padding-left: 2px;
    padding-top: 2px;
    position: relative;
    z-index: 1;

    img {
      width: 100px;
      height: 100px;
      border-radius: 50%;
    }
  }
  &--income {
    margin-top: 6px;
    margin-bottom: 22px;
    display: flex;
    flex-direction: column;
    align-items: center;

    &Price {
      font-weight: 700;
      font-size: 21px;
      line-height: normal;
      text-align: center;
      color: #ffffff;
      position: relative;

      &::after {
        content: '';
        position: absolute;
        width: 20px;
        height: 20px;
        right: -24px;
        top: 6px;
        background-image: url("https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg");
        background-size: cover;
      }
    }
    &Value {
      font-weight: 700;
      font-size: 15px;
      line-height: normal;
      text-align: center;
      color: #4fe34f;
      position: relative;

      &::after {
        content: '';
        position: absolute;
        width: 14px;
        height: 14px;
        right: -17px;
        top: 4px;
        background-image: url("https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg");
        background-size: cover;
      }
    }
  }
  &--text {
    padding-left: 38px;
    padding-right: 38px;
    font-weight: 700;
    font-size: 15px;
    line-height: normal;
    text-align: center;
    color: #ffffff;
  }
  &--statsWrapper {
    margin-top: 24px;
  }
  &--stats {
    &Col {
      padding-left: 13px;
      padding-right: 13px;

      & + & {
        border-left: 1px solid #8cad90;
      }
      &CoinIcon {
        width: 14px;
      }
    }
    &ColTitle {
      font-weight: 400;
      font-size: 13px;
      line-height: normal;
      color: #8cad90;
      margin: 0;
    }
    &ColValue {
      font-weight: 700;
      font-size: 15px;
      line-height: normal;
      color: #ffffff;
      margin: 0;

      &.activesModal--startPrice {
        position: relative;
        display: inline-flex;

        &::after {
          content: '';
          position: absolute;
          width: 14px;
          height: 14px;
          right: -17px;
          top: 4px;
          background-image: url("https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg");
          background-size: cover;
        }
      }
    }
  }
  &--button {
    margin-top: 24px;
    margin-bottom: 24px;
    width: 100%;
    appearance: none;
    border: 0 none;
    background-image: linear-gradient(to top, #fe8d03, #fcbf04);
    padding: 12px;
    border-radius: 8px;
    font-weight: 700;
    font-size: 18px;
    line-height: normal;
    text-align: center;
    color: #ffffff;
  }
}
.activesBlur {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 199;

  &--hidden {
    display: none;
  }
}
.pageContent.blur {
  & > .container-fluid {
    filter: blur(10px);
  }
}
.dailyCard {
  display: flex;
  position: relative;
  background-image: url("https://d25ebjvanew4na.cloudfront.net/static/card-of-the-day-bg@3x.png.webp");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  border-radius: 8px;
  margin-bottom: 7px;

  &--left {
    width: 55%;
    padding: 11px;
  }
  &--right {
    width: 45%;
    display: flex;
    justify-content: center;
    position: relative;
    padding-top: 11px;
  }
  &--title {
    font-weight: 700;
    font-size: 21px;
    line-height: 26px;
    color: #ffffff;
    margin-bottom: 17px;
    min-height: 52px;
  }
  &--reward {
    font-weight: 700;
    font-size: 18px;
    line-height: normal;
    color: #ffffff;
    border-radius: 8px;
    background-color: #01290F;
    padding: 9px 12px;
    display: inline-flex;

    img {
      margin-left: 6px;
      margin-top: 2px;
    }
  }
  &--timer {
    position: relative;
    width: 82px;
    height: 93px;
    background-image: url("https://d25ebjvanew4na.cloudfront.net/static/card-of-the-day-timer.svg");
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;

    &Countdown {
      position: absolute;
      right: 0;
      left: 0;
      top: 38px;
      text-align: center;
      font-weight: 700;
      font-size: 24px;
      line-height: 24px;
      color: #01290f;
    }
  }
  &--cornerText {
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    border-radius: 8px 0 8px 0;
    background-color: #FF8E04;
    font-size: 15px;
    line-height: 15px;
    font-weight: 700;
    text-align: center;
    color: #ffffff;
    padding: 5px 0;
  }
}
.activesModalDaily {
  background-image: url("https://d25ebjvanew4na.cloudfront.net/static/daily-modal-bg@3x.png.webp") !important;
  background-size: cover;
  background-position: left top;
  padding-bottom: 7px;

  &--cornerText {
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 8px 0 8px 0;
    background-color: #FF8E04;
    font-size: 15px;
    line-height: 15px;
    font-weight: 700;
    text-align: center;
    color: #ffffff;
    padding: 5px 22px;
  }
  &--question {
    font-weight: 700;
    font-size: 20px;
    line-height: 24px;
    text-align: center;
    color: #ffffff;
    margin-top: 13px;
    margin-bottom: 22px;
  }
  &--answer {
    appearance: none;
    border: 0 none;
    border-radius: 8px;
    width: 100%;
    font-weight: 700;
    font-size: 18px;
    line-height: normal;
    text-align: center;
    color: #ffffff;
    padding: 17px;
    background-color: #01290F;
    margin-bottom: 7px;
  }
}
.activesContent--preloader {
  display: flex;
  justify-content: center;

  img {
    width: 60px;
  }
}

